--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -33,14 +33,13 @@ body {
 }
 
 #productsForm {
-    padding: 1.51rem;
+    padding: 0.2rem 1.5rem;
     max-width: 300px;
-    margin: 1rem auto 0;
+    margin: 1rem 1rem 0;
     box-shadow: 0 0 1em #4f1872;
     border-radius: 5px;
     color: #6654769e;
 }
-
 .input_group {
     margin: 1rem;
     display: flex;
