--- a/src/public/css/logged.css
+++ b/src/public/css/logged.css
@@ -2,27 +2,20 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-  
-  body {
+}
+body {
     color: #124;
-    background-image: 
-        radial-gradient(rgba(red, 0.3), rgba(red, 0) 40vw),
-        radial-gradient(rgba(green, 0.3), rgba(green, 0) 40vw),
-        radial-gradient(rgba(blue, 0.3), rgba(blue, 0) 40vw),
-        radial-gradient(rgba(yellow, 0.3), rgba(yellow, 0) 40vw),
-        radial-gradient(rgba(red, 0.3), rgba(red, 0) 40vw);
-    background-position:
-        -40vw 14rem,
-        50% 10rem,
-        60vw 14rem,
-        -10vw calc(14rem + 20vw),
-        30vw calc(14rem + 20vw);
-      background-size: 80vw 80vw;
-      background-repeat: no-repeat;
-  }
+    background-position: initial;
+    background-size: cover;
+    background-image: url('https://img.freepik.com/foto-gratis/disposicion-elementos-naturaleza-muerta-verano_23-2148968974.jpg?w=1380&t=st=1658329835~exp=1658330435~hmac=587dec608581eefbef04ca5473e9ea52c5bc022137d44e7dec276f60496dc84a');
+}
 
+/* ////////////////////////////////////////////////////////////////// */
 
+.container .card.my-5 {
+    backdrop-filter: blur(5px);
+    background-color: #ffffffe0;
+}
 .chatContainer {
     display: flex;
     flex-direction: column;
@@ -35,5 +28,9 @@
     height:auto;
 }
 .logContainer {
-    min-width: 1000px;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    margin: 0 1rem 1rem 1rem;
+    background-color: #fdefce;      
+    background-image: linear-gradient(90deg, #fdefce 0%, #ffe2d6 100%);
 }
