--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -3,13 +3,15 @@
     margin: 0;
     padding: 0;
 }
-  
 body {
     color: #124;
     background-position: center;
     background-size: contain;
     background-image: url('https://img.freepik.com/foto-gratis/disposicion-elementos-naturaleza-muerta-verano_23-2148968974.jpg?w=1380&t=st=1658329835~exp=1658330435~hmac=587dec608581eefbef04ca5473e9ea52c5bc022137d44e7dec276f60496dc84a');
 }
+
+/* ////////////////////////////////////////////////////////////////// */
+
 .container .card.my-5 {
     backdrop-filter: blur(5px);
     background-color: #ffffffe0;
