--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -28,12 +28,20 @@ body {
     /* justify-content: center; */
     align-items: center;
 }
+.selectCategoryContainer {
+    margin: 1rem;
+    padding: 1rem 4rem;
+    border-radius: 10px;
+    box-shadow: 0 0 1em #94b3d1;
+    background-color: #ffdd73;
+    background-image: linear-gradient(90deg, #ffdd73 0%, #ffa370 100%);
+}
 #productsForm {
     padding: 0.2rem 0.5rem;
     min-width: 300px;
     margin: 1rem 1rem 0;
     box-shadow: 0 0 1em #94b3d1;
-    border-radius: 5px;
+    border-radius: 10px;
     color: #6654769e;
     background-color: #ffdd73;
     background-image: linear-gradient(90deg, #ffdd73 0%, #ffa370 100%);
@@ -45,7 +53,7 @@ body {
     min-width: 300px;
     margin: 1rem 1rem 0;
     box-shadow: 0 0 1em #94b3d1;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -108,7 +116,9 @@ body {
     display: flex;
     justify-content: space-evenly;
 }
-
+select#selectCategory {
+    min-width: 200px;
+}
 
 
 
