--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -47,6 +47,17 @@ body {
     background-image: linear-gradient(90deg, #ffdd73 0%, #ffa370 100%);
 
 }
+.productsForm2 {
+    padding: 0.2rem 0.5rem;
+    min-width: 300px;
+    margin: 1rem 1rem;
+    box-shadow: 0 0 1em #94b3d1;
+    border-radius: 10px;
+    color: #6654769e;
+    background-color: #ffdd73;
+    background-image: linear-gradient(90deg, #ffdd73 0%, #ffa370 100%);
+
+}
 #productsBox {
     padding: 0.2rem 1.5rem;
     max-width: 90vw;
@@ -119,9 +130,36 @@ body {
 select#selectCategory {
     min-width: 200px;
 }
+select.selectCategory {
+    min-width: 200px;
+}
 
 
+.modalEditContainer {  
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.3s ease; 
+}
 
+.modalEdit {
+    background-color: color;
+    width: 450px;
+    height: auto;
+}
+
+.showEditModal {
+    opacity: 1;
+    pointer-events: all;
+}
 
 /* INPUT FILE */
 .input-file {
